[gd_scene load_steps=10 format=3 uid="uid://dmqcxxicl0d0i"]

[ext_resource type="Script" path="res://Levels/main_menu.gd" id="1_tj4gb"]
[ext_resource type="PackedScene" uid="uid://u0bkmsttce0b" path="res://Levels/bg.tscn" id="2_paaua"]
[ext_resource type="FontFile" uid="uid://d3pti3a2ynei6" path="res://assets/fonts/04B_30__.TTF" id="3_6f6s4"]
[ext_resource type="Texture2D" uid="uid://dm4p4ggofiu02" path="res://backgrounds/title_text.png" id="3_aqmrr"]
[ext_resource type="AudioStream" uid="uid://c1dpqfnyk1ubt" path="res://assets/Audio/mixkit-interface-click-1126.mp3" id="4_oty6e"]
[ext_resource type="Texture2D" uid="uid://yhqm3o43ls5p" path="res://assets/GUI/plain_button.PNG" id="4_pq4te"]
[ext_resource type="Texture2D" uid="uid://bryh3jokmhjjo" path="res://assets/GUI/settings.PNG" id="4_q0spk"]
[ext_resource type="Texture2D" uid="uid://cxd7vjum6hs4k" path="res://assets/GUI/plain_button_hover.PNG" id="5_ar0vv"]
[ext_resource type="Texture2D" uid="uid://byo7b6732k78g" path="res://assets/GUI/settings_hover.PNG" id="7_euexl"]

[node name="Control" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tj4gb")

[node name="bg" parent="." instance=ExtResource("2_paaua")]
position = Vector2(641.448, 363.124)
scale = Vector2(1.18806, 1.0191)

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = -12.0
offset_top = -49.0
offset_right = 1268.0
offset_bottom = 371.0
texture = ExtResource("3_aqmrr")

[node name="Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 467.0
offset_top = 161.0
offset_right = 787.0
offset_bottom = 481.0
scale = Vector2(1.1612, 0.704254)
texture_normal = ExtResource("4_pq4te")
texture_hover = ExtResource("5_ar0vv")

[node name="label" type="Label" parent="Button"]
texture_filter = 1
layout_mode = 0
offset_left = 63.727
offset_top = 112.175
offset_right = 170.727
offset_bottom = 141.175
scale = Vector2(1.84793, 3.01793)
theme_override_colors/font_color = Color(0.913725, 0.913725, 0.913725, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_6f6s4")
theme_override_font_sizes/font_size = 20
text = "PLAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 467.0
offset_top = 306.0
offset_right = 787.0
offset_bottom = 626.0
scale = Vector2(1.16722, 0.760059)
texture_normal = ExtResource("4_pq4te")
texture_hover = ExtResource("5_ar0vv")

[node name="label2" type="Label" parent="Button2"]
texture_filter = 1
layout_mode = 0
offset_left = 16.278
offset_top = 111.833
offset_right = 173.278
offset_bottom = 140.833
scale = Vector2(1.84793, 3.01793)
theme_override_colors/font_color = Color(0.913725, 0.913725, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_6f6s4")
theme_override_font_sizes/font_size = 20
text = "CREDITS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 466.0
offset_top = 463.0
offset_right = 786.0
offset_bottom = 783.0
scale = Vector2(1.18782, 0.744396)
texture_normal = ExtResource("4_pq4te")
texture_hover = ExtResource("5_ar0vv")

[node name="label3" type="Label" parent="Button3"]
texture_filter = 1
layout_mode = 0
offset_left = 63.983
offset_top = 112.843
offset_right = 170.983
offset_bottom = 141.843
scale = Vector2(1.84793, 3.01793)
theme_override_colors/font_color = Color(0.913725, 0.913725, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_6f6s4")
theme_override_font_sizes/font_size = 20
text = "QUIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="button_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_oty6e")
volume_db = 15.0
bus = &"Sfx"

[node name="button delay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="settings" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 604.0
offset_right = 351.0
offset_bottom = 924.0
scale = Vector2(0.265134, 0.265134)
texture_normal = ExtResource("4_q0spk")
texture_hover = ExtResource("7_euexl")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="timeout" from="button delay" to="." method="_on_button_delay_timeout"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
